--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -220,12 +220,6 @@
       }
       /////QUIZ/////
       let score = 0;
-console.log(getQ3())
-console.log(getQ4())
-console.log(getQ5())
-console.log(getQ6())
-console.log(getQ7())
-console.log(getQ8()) //problem
       function renderQuestion(q) {
         let qArr = q();
         let answersArr = [` <div id="q_1" class="answerDiv">
@@ -289,7 +283,6 @@ console.log(getQ8()) //problem
           clearInterval(interval);
           alertAnswer('Wrong &#128531;', 'error')
         });
-
         const timerElement = document.getElementById('timer');
         let timeLeft = 30;
         timerElement.textContent = timeLeft;
@@ -298,6 +291,7 @@ console.log(getQ8()) //problem
           timerElement.textContent = timeLeft;
           if (timeLeft === 0) {
             clearInterval(interval);
+            if ($(".quizNav.is-active").length === 0) { return }
             timerElement.textContent = 'Time up!';
             alertAnswer('Wrong &#128531;', 'error')
           }
@@ -350,7 +344,6 @@ console.log(getQ8()) //problem
         if (localStorage.user !== undefined) {
           quizDiv.html(`<div class="about--banner"><h2 id="quizHeader">Songs Quiz</h2></div>`);
           quizDiv.append(`<button id="startQuizBtn">Start Quiz</button>`);
-          $("#startQuizBtn").on('click', () => manageQuiz());
           $("#startQuizBtn").on('click', () => manageQuiz());
         }
         else {
@@ -486,8 +479,8 @@ console.log(getQ8()) //problem
     }
 
     //////////Quiz/////////////
-const start=0;
-const end=50;
+    const start = 0;
+    const end = 50;
     //random artist
     function randomArtist() {
       if (localStorage.artists !== undefined) {
@@ -635,7 +628,7 @@ const end=50;
         success: function (songs) {
 
           const randInt = Math.floor(Math.random() * 3)
-          const songLyrics =songs[randInt].lyrics.substring(start, end)
+          const songLyrics = songs[randInt].lyrics.substring(start, end)
           const songArtist = songs[randInt].artistName
           q5Arr.push(`Who sang: ${songLyrics} ?`, songArtist)
           q5Arr.push(...generateDiff3Artists(songArtist))
@@ -928,9 +921,11 @@ const end=50;
     }
 
     function successCBSongLyrics(data) {
+      console.log(data)
       Swal.fire({
         title: `${data.name} Lyrics`,
-        html: `<div class="song-popup">${data.lyrics.replace(/\n/g, '<br>')}</div>
+        html: `<p>&#x1F44D; ${data.rate}</p>
+        <div class="song-popup">${data.lyrics.replace(/\n/g, '<br>')}</div>
                <br>
                <i id="song_${data.id}" class="fa fa-heart-o addToFavorite" title="Add To Favorite" style="color:white;"></i>`,
         color: 'white',
@@ -1197,12 +1192,20 @@ const end=50;
                       <input type="text" id="searchInput" spellcheck="false">
                       <label for="text">search</label>
                     </div>
+                    <button type="button" class="microphone-button" onclick="runSpeechRecog()">
+                      <svg class="microphone-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-mic" viewBox="0 0 16 16">
+                        <path
+                          d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z" />
+                        <path
+                          d="M10 8a2 2 0 1 1-4 0V3a2 2 0 1 1 4 0v5zM8 0a3 3 0 0 0-3 3v5a3 3 0 0 0 6 0V3a3 3 0 0 0-3-3z" />
+                      </svg>
+                    </button>
                     <input type="submit" id="searchBtn" value="Search">
                   </div>
                 </form>
-                <button onclick="runSpeechRecog()" style="background-color: black;">Sing</button>
-                <button onclick="authenticate().then(loadClient)">authorize and load</button>
-                <button onclick="execute()">execute</button>
+                <!-- <button onclick="authenticate().then(loadClient)">authorize and load</button>
+                <button onclick="execute()">execute</button> -->
               </div>
               <div class="work" id="songs">
             </li>
