--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -288,14 +288,18 @@
         timerElement.textContent = timeLeft;
         const interval = setInterval(() => {
           timeLeft--;
+          if ($(".quizNav.is-active").length === 0) { 
+            clearInterval(interval);
+            return;
+           }
           timerElement.textContent = timeLeft;
           if (timeLeft === 0) {
             clearInterval(interval);
-            if ($(".quizNav.is-active").length === 0) { return }
             timerElement.textContent = 'Time up!';
             alertAnswer('Wrong &#128531;', 'error')
           }
         }, 1000);
+
       }
 
       function alertAnswer(swalTitle, swalIcon) {
@@ -349,7 +353,7 @@
           quizDiv.html(`<div class="about--banner"><h2 id="quizHeader">Songs Quiz</h2></div>`);
           quizDiv.append(`<button id="startQuizBtn">Start Quiz</button>`);
           $("#startQuizBtn").on('click', () => {
-            if(localStorage.artists===undefined){
+            if (localStorage.artists === undefined) {
               quizDiv.html(`<span class="loader"></span>`)
               const interval = setInterval(() => {
                 if (localStorage.artists) {
@@ -358,7 +362,7 @@
                 }
               }, 100);
             }
-            else{
+            else {
               manageQuiz();
             }
           });
@@ -828,7 +832,7 @@
       var output = $("#searchInput");
       let recognization = new webkitSpeechRecognition();
       recognization.onstart = () => {
-        output.innerHTML = "Listening...";
+        output.val("Listening...");
       }
       recognization.onresult = (e) => {
         var transcript = e.results[0][0].transcript;
@@ -943,7 +947,6 @@
     }
 
     function successCBSongLyrics(data) {
-      console.log(data)
       Swal.fire({
         title: `${data.name} Lyrics`,
         html: `<p>&#x1F44D; ${data.rate}</p>
