--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -61,7 +61,7 @@
             <li class="l-section section section--is-active">
               <div class="intro">
                 <div class="intro--banner">
-                  <h1>Your next<br>interactive<br>experience</h1>
+                  <h1 id="mainPageHeader">Your next<br>interactive<br>experience</h1>
                   <button id="loginLink" class="cta">Login
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118"
@@ -73,11 +73,7 @@
                     </svg>
                     <span class="btn-background"></span>
                   </button>
-                  <!-- AdminPage Button -->
-                  <a href="./usersTable.html" target="_blank">Users</a>
-                  <a href="./songsTable.html" target="_blank">Songs</a>
-                  <a href="./artistsTable.html" target="_blank">Artists</a>
-                  <!-- AdminPage Button -->
+                  <div id="adminBtns"></div>
                   <br>
                   <span id="notMember">Not a Member? </span><button id="signUpLink" class="cta notMember"><u>Sign Up
                       Now</u></button>
