--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -128,8 +128,7 @@
                   </div>
                   <div class="work-request--information">
                     <div class="information-email searchInput">
-                      <input type="text" id="searchInput" spellcheck="false">
-                      <label for="text">search</label>
+                      <input type="text" id="searchInput" spellcheck="false" placeholder="Search">
                     </div>
                     <button type="button" class="microphone-button" onclick="runSpeechRecog()">
                       <svg class="microphone-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -170,6 +169,7 @@
                       <button class="artiststBtns" id="searchArtistBtn">Search</button>
                     </form>
                     <button class="artiststBtns" id="showAllArtistsBtn">Show All</button>
+                    <button class="artiststBtns" id="showFavoritesArtists">Show Favorites</button>
                   </div>
                 </div>
                 <span id="artistLoader" class="loader"></span>
